--- a/easy2.html
+++ b/easy2.html
@@ -43,7 +43,7 @@
     </div>
     <div class="body-overlay">
         <div class="win-box">
-            <h2>Congratulations you Win :)</h2>
+            <h2>Congratulations you Won :)</h2>
             <a class="menu-btn" href="fact1.html" title="Next">Next</a>
             <a class="menu-btn" href="easy2.html" title="Play again"><i class="fas fa-undo-alt"></i></a>
             <a class="menu-btn" href="level_easy.html" title="Back to levels">Back</a>
